[gd_scene load_steps=5 format=2]

[ext_resource path="res://Assets/Models/rock1.glb" type="PackedScene" id=1]
[ext_resource path="res://Scenes/Models/Misc/Scripts/rocks.gd" type="Script" id=2]

[sub_resource type="SpatialMaterial" id=1]
albedo_color = Color( 0.168627, 0.305882, 0.0470588, 1 )

[sub_resource type="CylinderShape" id=2]
radius = 1.44072
height = 0.0322684

[node name="rock1" instance=ExtResource( 1 )]
script = ExtResource( 2 )

[node name="rock" parent="." index="0" groups=[
"rock",
]]
layers = 524288

[node name="static_collision" parent="rock" index="0"]
collision_mask = 2

[node name="PlantCircle" type="Area" parent="." index="1"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -4.37835, 0 )

[node name="plant_area" type="CSGCylinder" parent="PlantCircle" index="0"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.521961, 0 )
cast_shadow = 0
operation = 2
snap = 0.029
radius = 1.51994
height = 0.0229909
material = SubResource( 1 )

[node name="CollisionShape" type="CollisionShape" parent="PlantCircle" index="1"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.531575, 0 )
shape = SubResource( 2 )

[connection signal="area_shape_entered" from="PlantCircle" to="." method="_on_PlantCircle_area_shape_entered"]
[connection signal="area_shape_exited" from="PlantCircle" to="." method="_on_PlantCircle_area_shape_exited"]
[connection signal="body_entered" from="PlantCircle" to="." method="_on_PlantCircle_body_entered"]
[connection signal="body_exited" from="PlantCircle" to="." method="_on_PlantCircle_body_exited"]
[connection signal="body_shape_entered" from="PlantCircle" to="." method="_on_PlantCircle_body_shape_entered"]
[connection signal="body_shape_exited" from="PlantCircle" to="." method="_on_PlantCircle_body_shape_exited"]
